...
            android:textColor="@color/purpleText"
            android:textColorHint="@color/purpleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <ListView
            android:id="@+id/recycler_chosenUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            tools:listitem="@layout/item_chosen_user"
            app:layout_constraintBottom_toTopOf="@id/btn_notification1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintVertical_bias="1.0" />

...
