...
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/purpleText"
                    android:text="View Map"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_chosen_entrants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/purpleText"
                    android:text="View Chosen Entrants"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_cancelled_entrants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/purpleText"
                    android:text="View Cancelled Entrants"
                    android:textColor="@color/black" />
...
